renamed, cleaned up todos, added some docs
