# orc8r/cloud/go/services/certifier/obsidian/models/swagger.v1.yml
@@ -8,19 +8,19 @@ magma-gen-meta:
   temp-gen-filename: certifier-swagger.yml
   output-dir: orc8r/cloud/go/services/certifier/obsidian
   types:
-    - go-struct-name: HTTPBasicAuth
-      filename: http_basic_auth_swaggergen.go
+    - go-struct-name: User
+      filename: user_swaggergen.go
 
 
 info:
-  title: Certifier HTTP Basic Auth Management
+  title: Certifier's User Management
   description: Certifier REST APIs
   version: 1.0.0
 
 basePath: /magma/v1
 
 paths:
-  /http_basic_auth:
+  /user:
     get:
       responses:
         "200":
@@ -49,7 +49,7 @@ paths:
       summary: Create a user
       tags:
         - HTTP Basic Auth
-  /http_basic_auth/{username}:
+  /user/{username}:
     put:
       parameters:
         - $ref: '#/parameters/username'
@@ -81,7 +81,7 @@ paths:
       tags:
         - HTTP Basic Auth
 
-  /http_basic_auth/login:
+  /user/login:
     post:
       security: [ ] # no security
       parameters:
@@ -89,7 +89,7 @@ paths:
           in: body
           required: true
           schema:
-            $ref: '#/definitions/http_basic_auth'
+            $ref: '#/definitions/user'
       responses:
         "200":
           description: Success
@@ -115,7 +115,7 @@ definitions:
     description: an object that associates a user with its policy
     properties:
       user:
-        $ref: '#/definitions/http_basic_auth'
+        $ref: '#/definitions/user'
       policy:
         $ref: '#/definitions/policy'
   policy:
@@ -136,12 +136,11 @@ definitions:
         type: array
         items:
           type: string
-    # TODO(christinewang5): openapi 2.0 doesn't support having multiple examples and this shows up as a list
     example:
       effect: ALLOW
       action: WRITE
       resources: "*"
-  http_basic_auth:
+  user:
     description: User's authentication info
     type: object
     required:
@@ -151,4 +150,4 @@ definitions:
       username:
         type: string
       password:
-        type: string # TODO(christinewang5): should i put more restrictions on password
+        type: string
